--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="intro">
             <h1 class="intro-heading">Typing Test</h1>
             <p class="font-weight-light intro-text">
-                This is a typing speed test! Type a letter to begin.
+                Welcome to the typing test! To begin type the first letter...
             </p>
         </div>
 
